--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <html>
-    <h1>
-        ur crnge
-    </h1>
+    <head>
+        <title>Mug With Luck</title>
+        <link rel="stylesheet" href="main.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div id="particles-js"></div>
+
+        <div class="text">
+            <div class="col1">
+                <h1>Mug With Luck</h1>
+            </div>
+            <div class="col2">
+                <p>Slogan hierzo ik ben niet creatief genoeg</p>
+            </div>
+        </div>
+    </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="index.js"></script>
