--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mug With Luck</title>
         <link rel="stylesheet" href="main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,14 +9,10 @@
     </head>
     <body>
         <div id="particles-js"></div>
-
         <div class="text">
-            <div class="col1">
                 <h1>Mug With Luck</h1>
-            </div>
-            <div class="col2">
                 <p>Slogan hierzo ik ben niet creatief genoeg</p>
-            </div>
+                <button class="btn">Bekijk onze designs</button>
         </div>
     </body>
 </html>
